@@ -2,4 +2,4 @@ config.*
 Makefile
 swig
 *.tar.gz
-
+configure
